update iac contract - explicit interface, only used params
